all-in-one revision

--- a/format_fsLR32k_to_192by192.ipynb
+++ b/format_fsLR32k_to_192by192.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/wheelock/data1/people/Chenyan/Tu-2025-VAE_FC_embedding/venv/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nibabel as nib\n",
     "import pandas as pd\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,25 +117,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rand_sample(left_surf_data, right_surf_data, sample_ratio=1.0):\n",
-    "    assert left_surf_data.shape == right_surf_data.shape\n",
+    "# def rand_sample(left_surf_data, right_surf_data, sample_ratio=1.0):\n",
+    "#     assert left_surf_data.shape == right_surf_data.shape\n",
+    "#     if sample_ratio <= 0 or sample_ratio > 1.0:\n",
+    "#         raise ValueError(\"Please pick a sample ratio between 0 and 1. \")\n",
+    "#     # print(left_surf_data.shape)\n",
+    "#     sample_size, _, _, img_size = left_surf_data.shape\n",
+    "#     indices = np.random.choice(sample_size, int(sample_size*sample_ratio), replace=False)\n",
+    "#     sampled_left_surf_data = left_surf_data[indices, :, :, :]\n",
+    "#     sampled_right_surf_data  = right_surf_data[indices, :, :, :]\n",
+    "#     return sampled_left_surf_data, sampled_right_surf_data\n",
+    "\n",
+    "def rand_sample(corrs, sample_ratio=1.0):\n",
     "    if sample_ratio <= 0 or sample_ratio > 1.0:\n",
     "        raise ValueError(\"Please pick a sample ratio between 0 and 1. \")\n",
     "    # print(left_surf_data.shape)\n",
-    "    sample_size, _, _, img_size = left_surf_data.shape\n",
+    "    sample_size = corrs.shape[1]\n",
     "    indices = np.random.choice(sample_size, int(sample_size*sample_ratio), replace=False)\n",
-    "    sampled_left_surf_data = left_surf_data[indices, :, :, :]\n",
-    "    sampled_right_surf_data  = right_surf_data[indices, :, :, :]\n",
-    "    return sampled_left_surf_data, sampled_right_surf_data"
+    "    sampled_corrs = corrs[:, indices]\n",
+    "    return sampled_corrs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,14 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,83 +318,54 @@
     "example_idx = 111\n",
     "subj, cifti1_path = cifti_cohort_df.iloc[example_idx, :2].tolist()\n",
     "tmask_subj, tmask_path = tmask_cohort_df.iloc[example_idx, :].tolist()\n",
+    "\n",
     "assert subj == tmask_subj\n",
     "tmask = np.loadtxt(tmask_path, dtype=int).astype(bool)\n",
     "\n",
     "cifti2_path = cifti2_filename(cifti1_path, \"./data/washu120/\")\n",
+    "transmat_path = \"./mask\"\n",
     "\n",
-    "cifti_img = nib.load(cifti2_path)\n",
-    "cifti_data = cifti_img.get_fdata()\n",
-    "cifti_header = cifti_img.header\n",
-    "bm_index_map = cifti_img.header.get_index_map(1)\n",
+    "# cifti_img = nib.load(cifti2_path)\n",
+    "# cifti_data = cifti_img.get_fdata()\n",
+    "# cifti_header = cifti_img.header\n",
+    "# bm_index_map = cifti_img.header.get_index_map(1)\n",
     "\n",
-    "# Initialize storage\n",
-    "vertex_indices = []\n",
-    "# Loop through the brain models in the index map\n",
-    "for bm in bm_index_map.brain_models:\n",
-    "    structure = bm.brain_structure\n",
-    "    if structure in ['CIFTI_STRUCTURE_CORTEX_LEFT', 'CIFTI_STRUCTURE_CORTEX_RIGHT']:\n",
-    "        # Convert Cifti2VertexIndices to numpy array\n",
-    "        offset = bm.index_offset\n",
-    "        count = bm.index_count\n",
-    "        vertex_indices.extend(range(offset, offset + count))\n",
+    "# # Initialize storage\n",
+    "# vertex_indices = []\n",
+    "# # Loop through the brain models in the index map\n",
+    "# for bm in bm_index_map.brain_models:\n",
+    "#     structure = bm.brain_structure\n",
+    "#     if structure in ['CIFTI_STRUCTURE_CORTEX_LEFT', 'CIFTI_STRUCTURE_CORTEX_RIGHT']:\n",
+    "#         # Convert Cifti2VertexIndices to numpy array\n",
+    "#         offset = bm.index_offset\n",
+    "#         count = bm.index_count\n",
+    "#         vertex_indices.extend(range(offset, offset + count))\n",
     "\n",
-    "vertex_indices = np.array(vertex_indices)\n",
-    "cortex_ts = np.transpose(cifti_data[:, vertex_indices])\n",
-    "masked_cortex_ts = cortex_ts[:, tmask]\n",
-    "corr_matrix = np.corrcoef(masked_cortex_ts)\n",
+    "# vertex_indices = np.array(vertex_indices)\n",
+    "# cortex_ts = np.transpose(cifti_data[:, vertex_indices])\n",
+    "# masked_cortex_ts = cortex_ts[:, tmask]\n",
+    "# corr_matrix = np.corrcoef(masked_cortex_ts)\n",
     "# print(corr_matrix.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(36864, 29696)\n",
-      "(36864, 29716)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "transmat_path = \"./mask\"\n",
-    "left_mask_struct = sio.loadmat(os.path.join(transmat_path, \"Left_fMRI2Grid_192_by_192_NN.mat\"))\n",
-    "left_mask = left_mask_struct['grid_mapping']\n",
-    "right_mask_struct = sio.loadmat(os.path.join(transmat_path, \"Right_fMRI2Grid_192_by_192_NN.mat\"))\n",
-    "right_mask = right_mask_struct['grid_mapping']\n",
-    "print(left_mask.shape)\n",
-    "print(right_mask.shape)\n",
+    "# left_mask_struct = sio.loadmat(os.path.join(transmat_path, \"Left_fMRI2Grid_192_by_192_NN.mat\"))\n",
+    "# left_mask = left_mask_struct['grid_mapping']\n",
+    "# right_mask_struct = sio.loadmat(os.path.join(transmat_path, \"Right_fMRI2Grid_192_by_192_NN.mat\"))\n",
+    "# right_mask = right_mask_struct['grid_mapping']\n",
+    "# print(left_mask.shape)\n",
+    "# print(right_mask.shape)\n",
     "# mask = sio.loadmat(os.path.join(transmat_path, \"MSE_Mask.mat\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(59412, 1, 192, 192)\n",
-      "(59412, 1, 192, 192)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for test\n",
-    "left_surf_data, right_surf_data = forward_reformatting(corr_matrix, transmat_path, img_size=192)\n",
-    "print(left_surf_data.shape)\n",
-    "print(right_surf_data.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +373,28 @@
      "output_type": "stream",
      "text": [
       "(5941, 1, 192, 192)\n",
+      "(5941, 1, 192, 192)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for test\n",
+    "corrs = calc_correlations(input_file=cifti2_path, tmask=tmask)\n",
+    "corrs = rand_sample(corrs, sample_ratio=0.1)\n",
+    "left_surf_data, right_surf_data = forward_reformatting(corrs, transmat_path, img_size=192)\n",
+    "print(left_surf_data.shape)\n",
+    "print(right_surf_data.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(5941, 4)\n",
       "(5941, 1, 192, 192)\n",
       "(5941, 1, 192, 192)\n"
@@ -417,8 +403,6 @@
    ],
    "source": [
     "model = load_model(zdim=2, nc=1, device=\"cpu\")\n",
-    "left_surf_data, right_surf_data = rand_sample(left_surf_data, right_surf_data, sample_ratio=0.1)\n",
-    "print(left_surf_data.shape)\n",
     "zs, left_surf_recon, right_surf_recon = model_inference(left_surf_data, right_surf_data, zdim=2, nc=1, mode=\"both\", batch_size=16, device=\"cpu\")\n",
     "\n",
     "print(zs.shape)\n",
